# Bachelor_thesis

./: .gitignore  .pre-commit-config.yaml  Makefile  __init__.py  data  generate_data.py  main.py  pred  pyproject.toml  requirements.txt
lightning_logs/version_0/checkpoints/: epoch=9-step=30.ckpt
lightning_logs/version_1/checkpoints/: epoch=49-step=150.ckpt
lightning_logs/version_10/checkpoints/: epoch=49-step=150.ckpt
lightning_logs/version_11/checkpoints/: epoch=49-step=150.ckpt
lightning_logs/version_12/checkpoints/: epoch=49-step=150.ckpt
lightning_logs/version_13/checkpoints/: epoch=49-step=150.ckpt
lightning_logs/version_14/checkpoints/: epoch=49-step=150.ckpt
lightning_logs/version_15/checkpoints/: epoch=49-step=150.ckpt
lightning_logs/version_16/checkpoints/: epoch=49-step=150.ckpt
lightning_logs/version_17/checkpoints/: epoch=49-step=150.ckpt
lightning_logs/version_18/checkpoints/: epoch=49-step=150.ckpt
lightning_logs/version_19/checkpoints/: epoch=49-step=150.ckpt
lightning_logs/version_2/checkpoints/: epoch=49-step=150.ckpt
lightning_logs/version_20/checkpoints/: epoch=49-step=150.ckpt
lightning_logs/version_21/checkpoints/: epoch=4-step=955.ckpt
lightning_logs/version_22/checkpoints/: epoch=0-step=191.ckpt
lightning_logs/version_23/checkpoints/: epoch=49-step=150.ckpt
scripts/simple/: generate_data.py
src/: __init__.py
src/datasets/: .pre-commit-config.yaml  __init__.py  simple_dataset.py
src/models/: LSTM.py  __init__.py
src/utils/: definitions.py  draw.py  simple.py  trajtest.py
(+28 files in other folders)
