[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Konstantin <k.dragun.k@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
torch = "^1.13.0"
sklearn = "^0.0.post1"
scikit-learn = "^1.1.3"
pytorch-lightning = "^1.8.3"
matplotlib = "^3.6.2"
trajdata = {extras = ["nusc"], version = "^1.1.0"}
opencv-python = "^4.6.0.66"
tensorboard = "^2.11.0"
pre-commit = "^3.0.4"
compiledb = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
